--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest]
 
     steps:
       - name: Checkout Code
@@ -61,10 +61,15 @@ jobs:
           wails build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Tar files on Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: tar -cvf build_on_${{ matrix.os }}.tar build/bin/
+
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: release_on_${{ matrix.os }}
-          path: release/
+          name: build_on_${{ matrix.os }}
+          path: build/bin/
           retention-days: 5
