fix: artifact path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,12 +66,20 @@ jobs:
           cd ../my-wails-project
           tar -cvf build_on_${{ matrix.os }}.tar ./build/bin/
 
+      - name: Get current directory
+        id: current_dir
+        run: echo "::set-output name=dir::$(pwd)"
+
       - name: Upload Artifact
-        run: cd ../my-wails-project
         uses: actions/upload-artifact@v3
-        # NOTE: 'working-directory' cannot be set here
         with:
           name: build_on_${{ matrix.os }}
-          # NOTE: Relative pathing '.' and '..' is not allowed.
-          path: build/bin/
+          path: '../build/bin/'
           retention-days: 5
+# If you use `actions/upload-artifact@v3`, you must know:
+# NOTE: Relative and absolute file paths are both allowed.
+#  Relative paths are rooted against the current working directory. 
+#  Paths that begin with a wildcard character should be quoted to avoid 
+#  being interpreted as YAML aliases.
+# NOTE: 'working-directory' cannot be set here
+# NOTE: A step cannot have both the `uses` and `run` keys
