--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,40 +25,40 @@ jobs:
         os: [windows-latest]
 
     steps:
-    #   - name: Checkout Code
-    #     uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    #   - name: Install linux dependencies
-    #     if: matrix.os == 'ubuntu-latest'
-    #     run: |
-    #       echo "The operating system on the runner is $env:RUNNER_OS."
-    #       sudo apt-get update -y && sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev build-essential pkg-config
+      - name: Install linux dependencies
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          echo "The operating system on the runner is $env:RUNNER_OS."
+          sudo apt-get update -y && sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev build-essential pkg-config
 
-    #   - name: Setup Go
-    #     uses: actions/setup-go@v4
-    #     with:
-    #       go-version: '1.20'
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
       
-    #   - name: Setup Wails CLI v2.6.0
-    #     run: go install github.com/wailsapp/wails/v2/cmd/wails@v2.6.0
+      - name: Setup Wails CLI v2.6.0
+        run: go install github.com/wailsapp/wails/v2/cmd/wails@v2.6.0
 
-    #   - name: Checkout Wails
-    #     run: wails doctor
+      - name: Checkout Wails
+        run: wails doctor
 
-    #   - name: Setup Node.js
-    #     uses: actions/setup-node@v3
-    #     with:
-    #       node-version: 18  
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18  
 
-    #   - name: Creating project with a template
-    #     run: |
-    #       cd ..
-    #       wails init -n my-wails-project -t wails-vite-vue-ts-navie-pinia
+      - name: Creating project with a template
+        run: |
+          cd ..
+          wails init -n my-wails-project -t wails-vite-vue-ts-navie-pinia
 
-    #   - name: Build Release Files
-    #     run: |
-    #       cd ../my-wails-project
-    #       wails build
+      - name: Build Release Files
+        run: |
+          cd ../my-wails-project
+          wails build
       
       # - name: Tar files on Linux
       #   if: matrix.os == 'ubuntu-latest'
@@ -66,24 +66,24 @@ jobs:
       #     cd ../my-wails-project
       #     tar -cvf build_on_${{ matrix.os }}.tar ./build/bin/
 
-      - name: Set artifacts_path (Windows)
+      - name: Copy build files (Windows)
         if: runner.os == 'Windows'
         shell: cmd # 在Windows中默认值是pwsh，也就是在运行 run 命令时使用 PowerShell
         run: |
-          echo artifacts_path=%CD% >> %GITHUB_ENV%
-          echo The path is: %artifacts_path%/build/bin/
+          mkdir build\bin
+          copy ..\my-wails-project\build\bin\* build\bin
 
-      # - name: Set artifacts_path (Linux)
-      #   if: runner.os != 'Windows'
-      #   run: |
-      #     cd ../my-wails-project
-      #     echo "artifacts_path=$PWD" >> $GITHUB_ENV
+      - name: Copy build files (Linux)
+        if: runner.os != 'Windows'
+        run: |
+          mkdir -p build/bin
+          cp ../my-wails-project/build/bin/* build/bin/
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
           name: build_on_${{ matrix.os }}
-          path: '%artifacts_path%/build/bin/'
+          path: build/bin
           retention-days: 5
 # If you use `actions/upload-artifact@v3`, you must know:
 # NOTE: Relative pathing '.' and '..' is not allowed. See #176
