--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
-name: MyWorkflows
-run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
+name: Build
+# run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
 
 on:
   push:
@@ -21,8 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        # os: [windows-latest, ubuntu-latest, macos-latest]
-        os: [windows-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest]
 
     steps:
       - name: Checkout Code
@@ -60,12 +59,6 @@ jobs:
           cd ../my-wails-project
           wails build
       
-      # - name: Tar files on Linux
-      #   if: matrix.os == 'ubuntu-latest'
-      #   run: |
-      #     cd ../my-wails-project
-      #     tar -cvf build_on_${{ matrix.os }}.tar ./build/bin/
-
       - name: Copy build files (Windows)
         if: runner.os == 'Windows'
         shell: cmd # 在Windows中默认值是pwsh，也就是在运行 run 命令时使用 PowerShell
